# loop-extractor

./: CMakeLists.txt  README.md
input/: README  coordinator.sh
input/ASCI_Purple/: HYPRE_pcg.bc  HYPRE_struct_grid.bc  HYPRE_struct_matrix.bc  HYPRE_struct_pcg.bc  HYPRE_struct_smg.bc  HYPRE_struct_stencil.bc  HYPRE_struct_vector.bc  box.bc  box_algebra.bc  box_alloc.bc  box_neighbors.bc  check-da.sh  check.sh  coarsen.bc  communication.bc  communication_info.bc  computation.bc  cyclic_reduction.bc  general.bc  grow.bc  info.sh  memory.bc  mpistubs.bc  msf.json  pcg.bc  pcg_struct.bc  point_relax.bc  project.bc  random.bc  semi_interp.bc  semi_restrict.bc  smg.bc  smg2000.bc  smg2000.ibc  smg2_setup_rap.bc  smg3_setup_rap.bc  smg_axpy.bc  smg_relax.bc  smg_residual.bc  smg_setup.bc  (+18 more)
input/ASC_Sequoia/: check.sh
input/ASC_Sequoia/AMGmk/: AMGmk.ibc  AMGmk.rbc  csr_matrix.bc  csr_matvec.bc  hypre_error.bc  hypre_memory.bc  info.sh  laplace.bc  main.bc  relax.bc  vector.bc
input/ASC_Sequoia/CrystalMk/: CrystalMk.ibc  CrystalMk.rbc  Crystal_Cholesky.bc  Crystal_div.bc  Crystal_pow.bc  SPEdriver.bc  info.sh  init.bc  main.bc
input/ASC_Sequoia/IRSmk/: IRSmk.ibc  IRSmk.rbc  info.sh  main.bc  rmatmult3.bc  utility.bc
input/Angha/: check.sh  extr_jcgimage.c_main.bc  extr_jcgimage_main.ibc  extr_union_vnops.c_unionfs_rename.bc  extr_union_vnops.c_unionfs_rename.ll  extr_union_vnops_unionfs_rename.ibc
input/CoyoteBench/: check.sh
input/CoyoteBench/almabench/: almabench.bc  almabench.ibc  almabench.rbc  info.sh  llvm-nof-inst.yaml  llvm-stats.y
input/CoyoteBench/fftbench/: fftbench.bc  fftbench.reference_output  info.sh
input/CoyoteBench/huffbench/: huffbench.bc  huffbench.ibc  (+3 more)
input/Polybench/: check.sh
src/: CMakeLists.txt  Pass.cpp  loopExtractor.cpp  loopExtractor.hpp
(+56 files in other folders)
